overlay fixed with whatever is inside our hero div to be pushed forward using z-index

--- a/css/style.css
+++ b/css/style.css
@@ -104,5 +104,9 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  background: red;
+  background: rgba(0,0,0,0.6);
+}
+
+.hero * {
+  z-index: 10;
 }
